...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".shopping_list.AddEditShoppingItemActivity"
    android:id="@+id/content">

    <Spinner
        android:id="@+id/shopping_item_addEdit_category"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/shopping_item_addEdit_editCategoryBtn"
        app:layout_constraintTop_toBottomOf="@+id/shopping_item_addEdit_unit"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ingredientStorageAdd_categoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/shopping_item_addEdit_category"
        app:layout_constraintEnd_toStartOf="@+id/shopping_item_addEdit_category"
        app:layout_constraintStart_toStartOf="@+id/shopping_item_addEdit_amount"
        app:layout_constraintTop_toTopOf="@+id/shopping_item_addEdit_category"
        app:layout_constraintVertical_bias="0.482" />

    <ImageButton
        android:id="@+id/shopping_item_addEdit_editCategoryBtn"
        android:layout_width="wrap_content"
...
        app:layout_constraintTop_toTopOf="@+id/shopping_item_addEdit_category"
        app:layout_constraintVertical_bias="1.0"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_menu_edit"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredient_store_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/purple_500"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/shopping_item_addEdit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
...
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shopping_item_addEdit_confirmBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:onClick="confirm"
        android:text="@string/confirm"
...
