...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/storage_icon"
        android:icon="@drawable/icon_storage"
        android:title="Storage" />
    <item
        android:id="@+id/recipe_icon"
        android:icon="@drawable/icon_recipes"
        android:title="Recipe" />
    <item android:title=""
        android:id="@+id/place_holder"
        android:enabled="false"/>
    <item
        android:id="@+id/cart_icon"
        android:icon="@drawable/icon_shoppinglist"
        android:title="shopping list" />
    <item
        android:id="@+id/meal_icon"
        android:icon="@drawable/icon_mealplan"
        android:title="meal plan" />
...
